# OpenGLTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: lightningShader.frag  lightningShader.vert  shader.frag  shader.vert
resources/luascripts/: script.lua
resources/shaders/: axis.frag  axis.vert  lightSource.frag  lightningShader.frag  lightningShader.vert  shader.frag
src/: AxisLines.cpp  CMakeLists.txt  Camera.h  EBO.cpp  EBO.h  FigureManager.cpp  GlobalVars.cpp  ImguiManager.cpp  LightManager.cpp  LuaMaintainer.cpp  LuaMaintainer.h  Mesh.cpp  Model.cpp  Object.cpp  PFigure.cpp  PImgui.cpp  PLight.cpp  PLua.cpp  PObject.cpp  Texture.cpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  line_class.cpp  line_class.h  lua-maintainer.cpp  main.cpp  shader.cpp  shader.h  verts.cpp
src/include/: AxisLines.h  Camera.h  EBO.h  FigureManager.h  GlobalVars.h  ImguiManager.h  LightManager.h  Mesh.h  Model.h  Object.h  ObjectManager.h  PFigure.h  PImgui.h  PLight.h  PLua.h  PObject.h  Shader.h  Texture.h  VAO.h  VBO.h  funcs.h  line_class.h  lua-maintainer.h  verts.h
